# cwr_frontend/cwr_frontend/api/serializers.py
@@ -12,3 +12,4 @@ class WorkflowSubmissionSerializer(serializers.Serializer):
     rocratefile = serializers.FileField(required=True )
     dry_run = serializers.BooleanField(required = False, default = False)
     webhook_url = serializers.URLField(required = False, default = None)
+    force = serializers.BooleanField(required=False, default=True)
